# NSPPK

./: .gitignore  ImportanceNSPPK Demo.ipynb  LICENSE  NSPPK Demo.ipynb  NSPPK HIV Benchmark.ipynb  NSPPK HIV Speed Benchmark.ipynb  NSPPK Streaming Benchmark.ipynb  NSPPK nbits Benchmark.ipynb  README.md  RESULTS.md  TODO.md  nsppk.py  pyproject.toml  utils.py
docs/: ATTRIBUTES_INTEGRATION.md  HASH.md  IMPORTANCE_NSPPK.md  IO.md
notebooks/: Demo.ipynb  Importance Demo.ipynb  Molecular Graph Learning Curve.ipynb  Molecular Graph Speed Benchmark.ipynb  Molecular Graph nbits Benchmark.ipynb  Streaming Benchmark.ipynb
src/: graph_hash.py  graph_io.py  hash.py  importance_nsppk.py  nsppk.py  utils.py
tests/: test_hash.py  test_importance_archive.py  test_shortest_path_union.py  test_streaming.py
