[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsppk"
version = "0.1.0"
description = "Neighbourhood Subgraph Pairwise Pathway Kernel for graph feature extraction."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Fabrizio Costa" },
]
dependencies = [
  "networkx>=3.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "multiprocessing-on-dill>=3.5.0a4",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["nsppk", "importance_nsppk", "graph_hash", "graph_io", "utils"]
